# PipelineLoop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
source/: CMakeLists.txt
source/MaaPluginDemo/: CMakeLists.txt
source/PipelineExt/: CMakeLists.txt
source/PipelineExt/API/: MaaPluginAPI.cpp
source/PipelineLoop/: CMakeLists.txt
